<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:gravity="center"
    android:padding="10dp">

    <ImageView
        android:id="@+id/closePopupImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="7dp"
        android:layout_marginRight="7dp"
        android:elevation="5dp"
        android:src="@drawable/ic_white_baseline_close_24" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        app:cardBackgroundColor="@color/font_color_700"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewWarning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/ic_baseline_check_circle_outline_24" />

                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/popup_member_contact_title"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:paddingLeft="30dp">

                    <ImageView
                        android:id="@+id/imageViewPhone"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/phone" />

                    <TextView
                        android:id="@+id/textViewPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/imageViewPhone"
                        android:fontFamily="@font/open_sans"
                        android:paddingLeft="10dp"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:text="@string/phone_number" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/name_title"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textViewNameContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/open_sans_bold"
                    android:paddingLeft="20dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:text="@string/contact_name" />

                <TextView
                    android:id="@+id/textViewAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/popup_member_bank_country_title"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textViewAddressContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/open_sans_bold"
                    android:paddingLeft="20dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:text="@string/spinner_country_name" />

                <android.widget.Button
                    android:id="@+id/btnConfirm"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/button_radius_border"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/popup_confirm_title"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>